@@ -1,72 +1,99 @@
 <stylecopresultscache>
   <version>10</version>
-  <project key="900415817">
+  <project key="1199980244">
     <configuration>DEBUG;TRACE</configuration>
   </project>
-  <sourcecode name="AssemblyInfo.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+  <sourcecode name="BaseGroup.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
     </settings>
-    <timestamp>01/29/2009 10:38:22</timestamp>
-    <milliseconds>215</milliseconds>
-    <violations />
-  </sourcecode>
-  <sourcecode name="Element.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
-    </settings>
-    <timestamp>01/30/2009 12:11:43</timestamp>
-    <milliseconds>739</milliseconds>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>328</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="CompleteGroup.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
     </settings>
-    <timestamp>01/30/2009 12:27:07</timestamp>
-    <milliseconds>100</milliseconds>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>328</milliseconds>
     <violations />
   </sourcecode>
-  <sourcecode name="GroupUtilities.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+  <sourcecode name="Element.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
     </settings>
-    <timestamp>01/30/2009 12:50:56</timestamp>
-    <milliseconds>393</milliseconds>
+    <timestamp>01/31/2009 12:35:27</timestamp>
+    <milliseconds>218</milliseconds>
     <violations />
   </sourcecode>
-  <sourcecode name="IGroup.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+  <sourcecode name="ElementComparer.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
     </settings>
-    <timestamp>01/30/2009 12:26:03</timestamp>
-    <milliseconds>211</milliseconds>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>234</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="ElementUtilities.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
     </settings>
-    <timestamp>01/30/2009 12:51:19</timestamp>
-    <milliseconds>297</milliseconds>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>312</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="GeneratedGroup.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
-      <timestamp>01/29/2009 10:38:22</timestamp>
-      <milliseconds>238</milliseconds>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
     </settings>
-    <timestamp>01/30/2009 12:51:18</timestamp>
-    <milliseconds>478</milliseconds>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>203</milliseconds>
     <violations />
   </sourcecode>
-  <project key="1199980244">
+  <sourcecode name="IGroup.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
+    </settings>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>296</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="SymmetricGroup.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
+    </settings>
+    <timestamp>01/31/2009 07:53:22</timestamp>
+    <milliseconds>421</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="AssemblyInfo.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
+    </settings>
+    <timestamp>01/28/2009 18:52:51</timestamp>
+    <milliseconds>859</milliseconds>
+    <violations />
+  </sourcecode>
+  <project key="900415817">
     <configuration>DEBUG;TRACE</configuration>
   </project>
+  <sourcecode name="GroupUtilities.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/31/2009 12:36:37</timestamp>
+      <milliseconds>718</milliseconds>
+    </settings>
+    <timestamp>01/31/2009 12:38:54</timestamp>
+    <milliseconds>859</milliseconds>
+    <violations />
+  </sourcecode>
 </stylecopresultscache>
